--- a/HTML/author.html
+++ b/HTML/author.html
@@ -80,7 +80,7 @@
                     He is interested in website development or software engineering and has a keen interest in database development.
                    He helped in the designing and building of our home page, assisted in fixing bugs. Built his own page and helped in building the website.
                   </p>
-                  <a class="bg-danger text-white btn" href="#">His Story</a>
+                  <a class="bg-danger text-white btn" href="../HTML/story3.html">His Story</a>
                 </div>
               </div>
               <div class="carousel-item bg-4">
