--- a/HTML/story1.html
+++ b/HTML/story1.html
@@ -43,7 +43,7 @@
                     <a class="dropdown-item" href="../HTML/story2.html">Josephine Nation Ekhator</a>
                   </li>
                   <li>
-                    <a class="dropdown-item" href="#"
+                    <a class="dropdown-item" href="../HTML/story3.html"
                       >Justus Wamswa Chemirmir</a>
                   </li>
                   <li>
