--- a/HTML/story3.html
+++ b/HTML/story3.html
@@ -174,9 +174,7 @@
     <article class="testimonial">
       <span class="card-number fw-bold">06</span>
       <h5 class="card-title  ">Future and Careers</h5>
-      <div
-          style="width: 20rem; height: 15rem; padding: 1rem; margin: 0rem auto 1rem auto; background-image: url(../IMAGES/justus/peter-fogden-z7oytXGI6VI-unsplash.jpg); background-size: cover; background-repeat: no-repeat; background-position: center;">
-        </div>
+      <div class="careers"></div>
 
       <p>
         There is a Career Development Department that helps students to navigate there career paths and choices 
