--- a/HTML/index.html
+++ b/HTML/index.html
@@ -39,7 +39,7 @@
                                 <a class="dropdown-item" href="../HTML/story2.html">Josephine Nation Ekhator</a>
                               </li>
                               <li>
-                                <a class="dropdown-item" href="#"
+                                <a class="dropdown-item" href="../HTML/story3.html"
                                   >Justus Wamswa Chemirmir</a>
                               </li>
                               <li>
@@ -136,7 +136,7 @@
                         </a>
                     </div>
                     <div class="hexagon hex4">
-                        <a href="">
+                        <a href="../HTML/story3.html">
                             <h2 class="desc">Justus</h2>
                         </a>
                     </div>
