--- a/HTML/story2.html
+++ b/HTML/story2.html
@@ -31,7 +31,7 @@
                   <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <li><a class="dropdown-item" href="../HTML/story1.html">Deborah Ama Paintsil</a></li>
                     <li><a class="dropdown-item" href="../HTML/story2.html">Josephine Nation Ekhator</a></li>
-                    <li><a class="dropdown-item" href="#">Justus Wamswa Chemirmir</a></li>
+                    <li><a class="dropdown-item" href="../HTML/story3.html">Justus Wamswa Chemirmir</a></li>
                     <li><a class="dropdown-item" href="#">Mangaliso Dlamini</a></li>
                     <li><a class="dropdown-item" href="#">Kevin Langat</a></li>
                   </ul>
