--- a/HTML/story4.html
+++ b/HTML/story4.html
@@ -30,7 +30,7 @@
                 <ul class="dropdown-menu">
                     <li><a class="dropdown-item" href="../HTML/story1.html">Deborah Ama Paintsil</a></li>
                     <li><a class="dropdown-item" href="../HTML/story2.html">Josephine Nation Ekhator</a></li>
-                    <li><a class="dropdown-item" href="#">Justus Wamswa Chemirmir</a></li>
+                    <li><a class="dropdown-item" href="../HTML/story3.html">Justus Wamswa Chemirmir</a></li>
                     <li><a class="dropdown-item" href="../HTML/story4.html">Mangaliso Dlamini</a></li>
                     <li><a class="dropdown-item" href="#">Kevin Langat</a></li>
                 </ul>
