add new changes

--- a/HTML/author.html
+++ b/HTML/author.html
@@ -10,7 +10,7 @@
 </head>
   <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+        <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-md">
               <a class="navbar-brand" href="../HTML/index.html"><h2 class="logo">IP-G2</h2></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,17 +33,17 @@
                             <a class="dropdown-item" href="../HTML/story2.html">Josephine Nation Ekhator</a>
                           </li>
                           <li>
-                            <a class="dropdown-item" href="#"
+                            <a class="dropdown-item" href="../HTML/story3.html"
                               >Justus Wamswa Chemirmir</a>
                           </li>
                           <li>
-                            <a class="dropdown-item" href="#">Mangaliso Dlamini</a>
+                            <a class="dropdown-item" href="../HTML/story4.html">Mangaliso Dlamini</a>
                           </li>
-                          <li><a class="dropdown-item" href="#">Kevin Langat</a></li>
+                          <li><a class="dropdown-item" href="../HTML/story5.html">Kevin Langat</a></li>
                     </ul>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link">The Author</a>
+                    <a class="nav-link">The Authors</a>
                   </li>
                 </ul>
               </div>
@@ -70,7 +70,7 @@
                     She is interested in website development or software engineering and has a keen interest in database development.
                     She helped with the smooth running of our project, constantly checking in to ensure that the project was in the right direction. Built her page and assisting when needed to fix bugs.
                   </p>
-                  <a class="bg-danger text-white btn" href="#">Her Story</a>
+                  <a class="bg-danger text-white btn" href="../HTML/story2.html">Her Story</a>
                 </div>
               </div>
               <div class="carousel-item bg-3">
@@ -80,7 +80,7 @@
                     He is interested in website development or software engineering and has a keen interest in database development.
                    He helped in the designing and building of our home page, assisted in fixing bugs. Built his own page and helped in building the website.
                   </p>
-                  <a class="bg-danger text-white btn" href="#">His Story</a>
+                  <a class="bg-danger text-white btn" href="../HTML/story3.html">His Story</a>
                 </div>
               </div>
               <div class="carousel-item bg-4">
@@ -90,7 +90,7 @@
                     He is interested in website development or software engineering and has a keen interest in database development.
                     He helped in the designing of the wireframe for the website. Gave feedbacks when necessary to beautify the website.
                     </p>
-                  <a class="bg-danger text-white btn" href="#">His Story</a>
+                  <a class="bg-danger text-white btn" href="../HTML/story4.html">His Story</a>
                 </div>
               </div>
               <div class="carousel-item bg-5">
