--- a/HTML/index.html
+++ b/HTML/index.html
@@ -16,7 +16,7 @@
 <body>
     <main>
         <section class="section1">
-            <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+            <nav class="navbar navbar-expand-lg navbar-light">
                 <div class="container-md">
                   <a class="navbar-brand" href="#"><h2 class="logo">IP-G2</h2></a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -45,11 +45,11 @@
                               <li>
                                 <a class="dropdown-item" href="../HTML/story4.html">Mangaliso Dlamini</a>
                               </li>
-                              <li><a class="dropdown-item" href="#">Kevin Langat</a></li>
+                              <li><a class="dropdown-item" href="../HTML/story5.html">Kevin Langat</a></li>
                         </ul>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="../HTML/author.html">The Author</a>
+                        <a class="nav-link" href="../HTML/author.html">The Authors</a>
                       </li>
                     </ul>
                   </div>
