--- a/HTML/story1.html
+++ b/HTML/story1.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+      <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-md">
           <a class="navbar-brand" href="../HTML/index.html"><h2 class="logo">IP-G2</h2></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -43,17 +43,17 @@
                     <a class="dropdown-item" href="../HTML/story2.html">Josephine Nation Ekhator</a>
                   </li>
                   <li>
-                    <a class="dropdown-item" href="#"
+                    <a class="dropdown-item" href="../HTML/story3.html"
                       >Justus Wamswa Chemirmir</a>
                   </li>
                   <li>
-                    <a class="dropdown-item" href="#">Mangaliso Dlamini</a>
+                    <a class="dropdown-item" href="../HTML/story4.html">Mangaliso Dlamini</a>
                   </li>
-                  <li><a class="dropdown-item" href="#">Kevin Langat</a></li>
+                  <li><a class="dropdown-item" href="../HTML/story5.html">Kevin Langat</a></li>
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../HTML/author.html">The Author</a>
+                <a class="nav-link" href="../HTML/author.html">The Authors</a>
               </li>
             </ul>
           </div>
