--- a/HTML/story3.html
+++ b/HTML/story3.html
@@ -15,10 +15,10 @@
 
 <body>
  <header>
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container-md">
         <a class="navbar-brand" href="../HTML/index.html">
-          <h2 class="logo text-white">IP-G2</h2>
+          <h2 class="logo">IP-G2</h2>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -27,7 +27,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active text-white" aria-current="page" href="../HTML/index.html">Home</a>
+              <a class="nav-link active text-white" aria-current="page" href="../HTML/index.html" stle="color:white;">Home</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
@@ -51,7 +51,7 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a href="../HTML/author.html" class="nav-link text-white">Authors</a>
+              <a href="../HTML/author.html" class="nav-link text-white">The Authors</a>
             </li>
           </ul>
         </div>
@@ -205,6 +205,21 @@
     </article>
 
   </main>
+
+  <section class="section3">
+    <footer>
+        <div class="jumbotron footer-jumbotron">
+            <div class="container-md">
+                <div class="row">
+                    <div class="col-md-12 pt-3">
+                        <h3>MADE WITH LOVE</h3>
+                        <p class="mt-3">&copy; 2022 GROUP 2, All Rights Reserved</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+  </section>
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
