add new changes

--- a/HTML/story3.html
+++ b/HTML/story3.html
@@ -59,6 +59,7 @@
     </nav>
   </header> 
 
+  <div class="container-md">
   <main class="testimonial-grid">
     <article class="testimonial">
       <span class="card-number fw-bold">01</span>
@@ -203,7 +204,7 @@
     </article>
 
   </main>
-
+  </div>  
   <section class="section3">
     <footer>
         <div class="jumbotron footer-jumbotron">
