add new changes

--- a/HTML/story1.html
+++ b/HTML/story1.html
@@ -166,6 +166,7 @@
                 by myself either watching a movie or doing some basic stuffs. So
                 far I have tried to become more sociable rather than being an
                 introvert. <br />
+                <br>
                 Most people tend to think I am an introvert and others too an
                 extrovert. I love spending time alone and doing things that
                 excite me the most. But I have some social life that includes
@@ -176,6 +177,8 @@
                 spend time with friends, example friends with the same interest
                 as me. I love to listen to people so I can hear diverse ideas of
                 people about life.
+                <br>
+                <br>
                 I have loved to talk to friends and interact more with them because of
                 the friends I made when I started studying in Mauritius. I actually love to make 
                 friends.
@@ -227,40 +230,19 @@
               <br>
               I also decided on creating an organization which will teach and train every young person some handy work skill such as knitting of bags, clothes, beads making and other skills that can help reduce the rate of unemployment.
               </p>
-              <h5 class="card-title py-3">Ideas for Future</h5>
+              <h5 class="card-title py-3">Ideas for Careers</h5>
               <p>
-                Because of the Covid-19 pandemic, we had to travel to Mauritius
-                in January, 2021 instead of September, 2020. It was quite a
-                fascinating situation because we had to do some few lessons
-                online from September to December, 2020 where learnt about
-                certain things of ALU and how to use learning materials provided
-                by the institution. <br />
-                I had to be in quarantine in a country i had no idea about and
-                it was suffocating especially because of the inability to go out
-                and explore the place. I can sometimes be seen as a boring person because I love to be
-                by myself either watching a movie or doing some basic stuffs. So
-                far I have tried to become more sociable rather than being an
-                Most people tend to think I am an introvert and others too an
-                extrovert. I love spending time alone and doing things that
-                excite me the most. But I have some social life that includes
-                both personal and professional interactions. I see it as an
-                element of learning, joy, self-fulfillment and personal
-                resilience. I love working as a team with my peers groups and
-                friends because I see it as a way of learning from people. I
-                spend time with friends, example friends with the same interest
-                as me. I love to listen to people so I can hear diverse ideas of
-                extrovert. I love spending time alone and doing things that
-                excite me the most. But I have some social life that includes
-                both personal and professional interactions. I see it as an
-                element of learning, joy, self-fulfillment and personal
-                resilience. I love working as a team with my peers groups and
-                friends because I see it as a way of learning from people. I
-                spend time with friends, example friends with the same interest
-                as me. I love to listen to people so I can hear diverse ideas ofm 
-                friends because I see it as a way of learning from people. I
-                spend time with friends, example friends with the same interest
-                as me. I love to listen to people so I can hear diverse ideas ofm 
-                
+                Apart from these ideas of helping my community to become a better and a developed community in Ghana, I have an interest in website development. 
+                I have always wanted to create something out of my ideas and looking at how some develops come up with ideas to help the society to improve, 
+                I desired to become a website developer or a software engineer. After learning about database development in my second year,
+                I realized I had gain an interest in database administration.  <br /> 
+                <br>
+                I have promised myself that, I will become a successful developer or administrator one day. I also want to be a business woman who owns supermarkets, restaurants, bakeries etc. 
+                All these are things that came along the way. I realized I could become a 
+                freelancer in web development or database administration and go into full time business. <br>
+                <br>
+                Above all, I will like to create an organization which can help the less privileged in the society.
+                It is my aim to make my world a better place to live in. <br>
               </p>
             </div>
           </div>
@@ -342,18 +324,16 @@
 
     <div class="jumbotron comment-jumbotron">
       <div class="container-md">
-        <div class="row">
-          <div class="col-md-2"></div>
-          <div class="col-md-8">
-            <h3 class="text-center">Comment and Connect</h3>
-            <div class="contact-form">
-              <input type="text" placeholder="Name">
-              <input type="text" placeholder="Email">
-              <input type="text" placeholder="Message">
-              <button type="button" class="btn btn-outline-warning">Send</button>
-          </div>
-          </div>
-          <div class="col-md-2"></div>
+        <div class="mb-3">
+          <label for="exampleFormControlInput1" class="form-label">Email address</label>
+          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+        </div>
+        <div class="mb-3">
+          <label for="exampleFormControlTextarea1" class="form-label">Comment section</label>
+          <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+        </div>
+        <div class="col-12">
+          <button type="submit" class="btn btn-primary">Comment</button>
         </div>
       </div>
     </div>
