--- a/HTML/story5.html
+++ b/HTML/story5.html
@@ -61,8 +61,7 @@
                 <img src="../IMAGES/IMG_KEV11.jpg" class="img-fluid" />
                   <h5 class="card-title py-3">About Me</h5>
                   <p>
-                    My name is Mangaliso Linda Dlamini (FYI, that's not the Spanish Linda. From my native language, it means to be patient). <br> 
-                    I am Computing student at the African Leadership College in Mauritius. I am humble, noble lad and probably will be quietest guy in the room. 
+                    My name is Langat Kevin, 20, and a second-year student studying computing at African Leadership College, Mauritius. My home town is Bomet, in Bomet County in Kenya, where I have grown for the better part of my life. <br>I studied at a primary school called Kimulot Primary School before I  moved to LENANA SCHOOL in Nairobi, Kenya. I later joined Strathmore Univesity in Nairobi, Kenya, for a four-month Young Entrepreneurs Training Program offered by Strathmore Business School and sponsored by The Allan and Gill Philanthropy Africa. 
                 </p>
                   <a href="#"
                     ><i class="fa fa-facebook-official" aria-hidden="true"></i
@@ -97,26 +96,12 @@
                 </p>
                 <h5 class="card-title py-3">ALU Journey</h5>
                 <p>
-                  I wanted to learn about ALA, ALU’s sister institution which had visited my high school a few years ago. However, being at a tertiary institution, ALA offerings seemed a step back. 
-                  So, I randomly searched African Leadership University on google, which lead me to the ALU website. I read their mission and vision, and few articles which had more insight in what their goals are. 
-                  All of it appealed to me. Then I hit the apply button. <br>
-                  <br>
-                  The application process was an intense process. While I was itching to be part of ALU and its mission, it seemed remote that I would making cut, and moreover be awarded a scholarship. 
-                  So, at every stage of the application I was used to say to myself how far can I go beyond. Amazingly, I went all the way.<br>
-                  <br>
-                  While the stars looked to be aligning, coronavirus was making rounds across the world. Lockdowns in my home country made it difficult to get certain documents which were required particularly for visa application. 
-                  And travel restriction, in Mauritius caused a delay from a September start date to a January start date.
+                  I first heard about ALU in 2015 at a career fair held at LENANA SCHOOL, where some ALU students, Catherine Njeri and Michael Mutie, at that time were present. They explained how students at ALU are working on their missions and not majors and also talked about student-based learning. This increased my curiosity about the school, and I could not wait to finish high school and apply to ALU. <br>In my last high school term, I applied to ALU in 2018 and was accepted. I, however, had to defer my admission because I did not have my academic papers yet. My preferred campus was ALC, and unfortunately, 2019 did not offer any scholarships, and I had to defer my admission for the second time. My application was rescinded in 2020, and I had to start my application all over again because the qualifications and application process had changed. <br>I got accepted again and was excited when I got my flight ticket. Moving to ALU was one of the best moments in my life because I was moving out of the country, and it meant getting on the plane for the first time. Meeting diverse students from all over the continent was amazing. It meant learning about their way of life, culture and food. I first wanted to study Social Science but later changed to Computing because I am more interested in data analysis. I could only focus and learn more about it by studying Computing. <br>The classes have been excellent, as we learn a lot from our facilitators and fellow students. Collaborating with students has also been helpful in my areas of struggle, as I can get help from a group member. I advise prospective students to maximize the opportunities ALU offers, always do their best and follow their dreams. They should also not be afraid to fail as it is part of learning. <br>My time at ALU has been fantastic; I have met many amazing people worldwide and learnt a lot. I have also learned a lot about myself and have been able to realize my true potential.
                 </p>
                 <h5 class="card-title py-3">Life At ALU</h5>
-                <p>
-                  While the stars looked to be aligning, coronavirus was making rounds across the world. Lockdowns in my home country made it difficult to get certain documents which were required particularly for visa application. 
-                  And travel restriction, in Mauritius caused a delay from a September start date to a January start date. <br>
-                  <br>
-                  ALU classes were different than what I had experienced before. They were longer than the classes from my former university. However, the have activities such group discussion and class discussions 
-                  which made them more engaging and interactive. <br>
-                  <br>
-                  I would advice prospective students that the ALU journey will often seem different and very intense even with the application process, but it very much worth it.
-                </p>
+                <!--<p>
+                  I have had a fantastic experience in Mauritius. The experience has been wow! I travelled a lot during my first year and even got an award for travelling. <br>Travelling comes with other adventures, and one thing that I have come to love is photography. Starting from point zero to becoming an ALU marketing intern is one of the most significant steps I took in my first year. <br>I also learnt how to drive in Mauritius and even got into the taxi business. I also faced some challenges, like when my friend caused an accident, and we had to pay for the damages.
+                </p> -->
                 <img src="../IMAGES/ALUNIGHT.webp" alt="ALU AT NIGHT" class="img-fluid py-3">
                 <!-- <a href="#" class="btn btn-outline-warning"></a> -->
               </div>
@@ -128,8 +113,7 @@
                 <span class="card-number fw-bold">06</span>
                 <h5 class="card-title py-3">Social Life</h5>
                 <p>
-                  I love my sports except for American sports, I am still struggling to understand most of them. Though I have never played for official teams, I have had the chance to try football, volleyball and cricket. 
-                  I am no party boy hence a Friday night in is often better than a Friday night out.
+                  Apart from studies, travelling and working, I have an amazing Social Life. I like going to parties with friends and hanging out. I also participate in social projects both on and off campus. <br>At home, I run a C.B.O. called Tunza Community Based Organisation, whose main objective is to solve challenges faced by kids in public primary schools in rural parts of Kenya. <br>I recently founded a startup called Legim Farm in Mauritius to produce organic, chemical-free, healthy vegetables for the Mauritian community.
                 </p>
               </div>
             </div>
@@ -142,8 +126,7 @@
                 <span class="card-number fw-bold">07</span>
                 <h5 class="card-title py-3">Ideas For the Future & Careers</h5>
                 <p>
-                  The idea is to either go for a masters in Cybersecurity or to work towards earning professional ethical hacking certificates. 
-                  The aim is to use the knowledge and experience to create and strength cybersecurity frameworks and policies in my country.
+                  I am looking forward to venturing into the Data Analysis field as it is a field that has been fascinating to me. Furthering my studies beyond the Masters's level in Data Analysis is what I am looking forward to achieving. <br>Eventually, working at big companies like Google would be an ideal career satisfaction. I also look forward to solving food insecurity worldwide, especially in Africa, using the Circular Economy methods in hydroponic farming.
                 </p>
                 <h5 class="card-title py-3">Ideas for Career</h5>
                 <p>
@@ -175,8 +158,7 @@
                 <span class="card-number fw-bold">05</span>
                 <h5 class="card-title py-3">Life in Mauritius</h5>
                 <p>
-                  Mauritius is a beautiful island country that is famous for its natural riches and great culture. However, I do not admire the taste and smell of their food because I am already used to typical Nigerian dishes so it was very difficult to cope. 
-                  Because of the struggle I had with eating and studies, I reached out to the student life and wellness team. It was them that gave me the strategies to manage my academics and prepare my own meal with the available foodstuff in the country. <br>
+                  I have had a fantastic experience in Mauritius - Afroca's most beautiful island. The experience has been wow! I travelled a lot during my first year and even got an award for travelling. <br>Travelling comes with other adventures, and one thing that I have come to love is photography. Starting from point zero to becoming an ALU marketing intern is one of the most significant steps I took in my first year. <br>I also learnt how to drive in Mauritius and even got into the taxi business. I also faced some challenges, like when my friend caused an accident, and we had to pay for the damages.
               </p>
               </div>
             </div>
@@ -192,7 +174,7 @@
                   <br>
                   Otherwise, the country is known for its strong cultural values and mountainous landscapes. It has some fascinating artifacts including the second largest rock in the world, 
                   Sibebe Rock and is home to the wildlife big five (Lion, Leopard, elephant, buffalo, rhino) 
-                </p>
+                </p> 
                 <!-- <h3>Pictures of the Edo State</h3>
                 <img src="../IMAGES/Benin_City.jpg" alt="Benin City" class="img-fluid">
                 <p class="Note mt-4">
