--- a/HTML/story4.html
+++ b/HTML/story4.html
@@ -36,7 +36,7 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../HTML/author.html">The Authors</a>
+                <a class="nav-link" href="../HTML/authors.html">The Authors</a>
               </li>
             </ul>
           </div>
