--- a/HTML/story5.html
+++ b/HTML/story5.html
@@ -44,7 +44,7 @@
                     </ul>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="../HTML/author.html">The Authors</a>
+                    <a class="nav-link" href="../HTML/authors.html">The Authors</a>
                   </li>
                 </ul>
               </div>
@@ -98,10 +98,6 @@
                 <p>
                   I first heard about ALU in 2015 at a career fair held at LENANA SCHOOL, where some ALU students, Catherine Njeri and Michael Mutie, at that time were present. They explained how students at ALU are working on their missions and not majors and also talked about student-based learning. This increased my curiosity about the school, and I could not wait to finish high school and apply to ALU. <br>In my last high school term, I applied to ALU in 2018 and was accepted. I, however, had to defer my admission because I did not have my academic papers yet. My preferred campus was ALC, and unfortunately, 2019 did not offer any scholarships, and I had to defer my admission for the second time. My application was rescinded in 2020, and I had to start my application all over again because the qualifications and application process had changed. <br>I got accepted again and was excited when I got my flight ticket. Moving to ALU was one of the best moments in my life because I was moving out of the country, and it meant getting on the plane for the first time. Meeting diverse students from all over the continent was amazing. It meant learning about their way of life, culture and food. I first wanted to study Social Science but later changed to Computing because I am more interested in data analysis. I could only focus and learn more about it by studying Computing. <br>The classes have been excellent, as we learn a lot from our facilitators and fellow students. Collaborating with students has also been helpful in my areas of struggle, as I can get help from a group member. I advise prospective students to maximize the opportunities ALU offers, always do their best and follow their dreams. They should also not be afraid to fail as it is part of learning. <br>My time at ALU has been fantastic; I have met many amazing people worldwide and learnt a lot. I have also learned a lot about myself and have been able to realize my true potential.
                 </p>
-                <h5 class="card-title py-3">Life At ALU</h5>
-                <!--<p>
-                  I have had a fantastic experience in Mauritius. The experience has been wow! I travelled a lot during my first year and even got an award for travelling. <br>Travelling comes with other adventures, and one thing that I have come to love is photography. Starting from point zero to becoming an ALU marketing intern is one of the most significant steps I took in my first year. <br>I also learnt how to drive in Mauritius and even got into the taxi business. I also faced some challenges, like when my friend caused an accident, and we had to pay for the damages.
-                </p> -->
                 <img src="../IMAGES/ALUNIGHT.webp" alt="ALU AT NIGHT" class="img-fluid py-3">
                 <!-- <a href="#" class="btn btn-outline-warning"></a> -->
               </div>
