--- a/HTML/story3.html
+++ b/HTML/story3.html
@@ -51,7 +51,7 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a href="../HTML/author.html" class="nav-link text-white">The Authors</a>
+              <a href="../HTML/authors.html" class="nav-link text-white">The Authors</a>
             </li>
           </ul>
         </div>
