--- a/HTML/authors.html
+++ b/HTML/authors.html
@@ -4,109 +4,125 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>The Authors</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-  
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link href="../CSS/authors.css" rel="stylesheet">
 </head>
   <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="../HTML/index.html"><h2 class="logo">IP-G2</h2></a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="../HTML/index.html" style="color:white;">Home</a>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Our Stories
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="../HTML/story1.html">Deborah Ama Paintsil</a></li>
-                        <li><a class="dropdown-item" href="../HTML/story2.html">Josephine Nation Ekhator</a></li>
-                        <li><a class="dropdown-item" href="../HTML/story3.html">Justus Wamswa Chemirmir</a></li>
-                        <li><a class="dropdown-item" href="../HTML/story4.html">Mangaliso Dlamini</a></li>
-                        <li><a class="dropdown-item" href="../HTML/story5.html">Kevin Langat</a></li>
-                    </ul>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="../HTML/authors.html">The Authors</a>
-                  </li>
-                </ul>
-              </div>
+    <nav class="navbar navbar-expand-lg light fixed-top">
+      <div class="container-md">
+        <a class="navbar-brand" href="../HTML/index.html"><h2 class="logo">IP-G2</h2></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="../HTML/index.html" style="color:white;">Home</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
+              Our Stories
+            </a>
+            <div class="dropdown-menu">
+              <a class="dropdown-item" href="#">Deborah Ama Paintsil</a>
+              <a class="dropdown-item" href="#">Josephine Ekhator Nation</a>
+              <a class="dropdown-item" href="#">Justus Wamswa Chemirmir</a>
+              <a class="dropdown-item" href="#">Mangaliso Dlamini</a>
+              <a class="dropdown-item" href="#">Kevin Langat</a>
             </div>
-          </nav>  
-          
-          <div class="carousel slide" data-bs-ride="carousel" id="carouselExampleCaptions">
-            <div class="carousel-inner">
-              <div class="carousel-item active bg-1">
-                <div class="carousel-caption">
-                  <p>
-                  <span>Deborah Ama Paintsil </span>, a Ghanaian citizen and the Project Manager for our project.
-                    She is interested in website development or software engineering and has a keen interest in database development.
-                    She ensured that the project was ongoing and every team member did his or her assigned task. She also helped in assigning of tasks.
-                    Contributed in building and desiging of the website.
-                  </p>
-                  <a class="bg-danger text-white btn" href="../HTML/story1.html">Her Story</a>
-                </div>
-              </div>
-              <div class="carousel-item bg-2">
-                <div class="carousel-caption">
-                  <p>
-                    <span>Josephine Ekhator Nation</span>, a Nigerian citizen and a team member of our project.
-                    She is interested in website development or software engineering and has a keen interest in database development.
-                    She helped with the smooth running of our project, constantly checking in to ensure that the project was in the right direction. Built her page and assisting when needed to fix bugs.
-                  </p>
-                  <a class="bg-danger text-white btn" href="../HTML/story2.html">Her Story</a>
-                </div>
-              </div>
-              <div class="carousel-item bg-3">
-                <div class="carousel-caption">
-                  <p>
-                    <span>Justus Wamswa Chemirmir</span>, a Kenyan citizen and a team member for our project.
-                    He is interested in website development or software engineering and has a keen interest in database development.
-                   He helped in the designing and building of our home page, assisted in fixing bugs. Built his own page and helped in building the website.
-                  </p>
-                  <a class="bg-danger text-white btn" href="../HTML/story3.html">His Story</a>
-                </div>
-              </div>
-              <div class="carousel-item bg-4">
-                <div class="carousel-caption">
-                  <p>
-                  <span>Mangaliso Dlamini</span>, an Eswantini citizen and a team member for our project.
-                    He is interested in website development or software engineering and has a keen interest in database development.
-                    He helped in the designing of the wireframe for the website. Gave feedbacks when necessary to beautify the website.
-                    </p>
-                  <a class="bg-danger text-white btn" href="../HTML/story4.html">His Story</a>
-                </div>
-              </div>
-              <div class="carousel-item bg-5">
-                <div class="carousel-caption">
-                <p>
-                  <span>Kevin Langat</span>, a Kenyan citizen and a team member for our project.
-                  He is interested in website development or software engineering and has a keen interest in database development.
-                 He helped in the building of our home page, built his webpage and was available for meetings throughout the project.
-                </p>
-                <a class="bg-danger text-white btn" href="#">His Story</a>
-                </div>
-              </div>
-            </div><button class="carousel-control-prev" data-bs-slide="prev" data-bs-target="#carouselExampleCaptions" type="button"><span aria-hidden="true" class="carousel-control-prev-icon"></span> <span class="visually-hidden">Previous</span></button> <button class="carousel-control-next" data-bs-slide="next" data-bs-target="#carouselExampleCaptions" type="button"><span aria-hidden="true" class="carousel-control-next-icon"></span> <span class="visually-hidden">Next</span></button> <!--thumbnails-->
-            <div class="carousel-indicators">
-              <button aria-label="Slide 1" class="active" data-bs-slide-to="0" data-bs-target="#carouselExampleCaptions" type="button"></button> <button aria-label="Slide 2" data-bs-slide-to="1" data-bs-target="#carouselExampleCaptions" type="button"></button> <button aria-label="Slide 3" data-bs-slide-to="2" data-bs-target="#carouselExampleCaptions" type="button">
-                <button aria-label="Slide 4" data-bs-slide-to="3" data-bs-target="#carouselExampleCaptions" type="button"><button aria-label="Slide 5" data-bs-slide-to="4" data-bs-target="#carouselExampleCaptions" type="button">
-              </button>
-            </div>
-          </div>
-    </header>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="">The Authors</a>
+          </li>
+        </ul>
+      </div>
+      </div>
+    </nav>
 
-    <section class="section3">
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="../IMAGES/IMG-DEE.jpg" class="d-block w-100 author" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>I'm Deborah</h5>
+            <p>
+               a Ghanaian citizen and the Project Manager for our project.
+               Interested in website development or software engineering and has a keen interest in database development.
+               Ensured that the project was ongoing and every team member did his or her assigned task. I also helped in assigning of tasks.
+               Contributed in building and desiging of the website.
+             </p>
+             <a class="bg-danger text-white btn" href="../HTML/story1.html">Her Story</a>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="../IMAGES/nation1.jpeg" class="d-block w-100 author" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>I'm Josephine</h5>
+             <p>a Nigerian citizen and a team member of our project.
+              Interested in website development or software engineering and has a keen interest in database development.
+              Helped with the smooth running of our project, constantly checking in to ensure that the project was in the right direction. Assisted when needed to fix bugs.
+            </p>
+            <a class="bg-danger text-white btn" href="../HTML/story2.html">Her Story</a>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="../IMAGES/Justus.jpg" class="d-block w-100 author" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>I'm Justus</h5>
+            <p>a Kenyan citizen and a team member for our project.
+             Interested in website development or software engineering and has a keen interest in database development.
+            Helped in the designing and building of our home page, assisted in fixing bugs. Built my own page and helped in building the website.
+          </p>
+          <a class="bg-danger text-white btn" href="../HTML/story3.html">His Story</a>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="../IMAGES/Manga.jpeg" class="d-block w-100 author" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>I'm Mangaliso</h5>
+            <p>an Eswantini citizen and a team member for our project.
+             Interested in cybersecurity.
+             Helped in the designing of the wireframe for the website. Gave feedbacks when necessary to beautify the website.
+           </p>
+           <a class="bg-danger text-white btn" href="../HTML/story4.html">His Story</a>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="../IMAGES/Untitled design (2).png" class="d-block w-100 author" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>I'm Kevin</h5>
+             <p> 
+              a Kenyan citizen and a team member for our project.
+              Interested in website development or software engineering and has a keen interest in database development.
+              Helped in the building of our home page, built my webpage and was available for meetings throughout the project.
+            </p>
+            <a class="bg-danger text-white btn" href="../HTML/story1.html">His Story</a>
+          </div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-target="#carouselExampleIndicators" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-target="#carouselExampleIndicators" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </button>
+    </div>
+  </header>
+
+     <section class="section3">
         <footer>
-            <div class="jumbotron footer-jumbotron">
-                <div class="container-md">
+                <div class="container-md footer">
                     <div class="row">
                         <div class="col-md-12 pt-3">
                             <h3>MADE WITH LOVE</h3>
@@ -114,9 +130,12 @@
                         </div>
                     </div>
                 </div>
-            </div>
         </footer>
-    </section>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+    </section>  
+
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"></script>
+
   </body>
 </html>
