--- a/HTML/authors.html
+++ b/HTML/authors.html
@@ -64,7 +64,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img src="../IMAGES/nation1.jpeg" class="d-block w-100 author" alt="...">
+          <img src="../IMAGES/JO.jpg" class="d-block w-100 author" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5>I'm Josephine</h5>
              <p>a Nigerian citizen and a team member of our project.
