add new changes

--- a/HTML/authors.html
+++ b/HTML/authors.html
@@ -26,15 +26,15 @@
               Our Stories
             </a>
             <div class="dropdown-menu">
-              <a class="dropdown-item" href="#">Deborah Ama Paintsil</a>
-              <a class="dropdown-item" href="#">Josephine Ekhator Nation</a>
-              <a class="dropdown-item" href="#">Justus Wamswa Chemirmir</a>
-              <a class="dropdown-item" href="#">Mangaliso Dlamini</a>
-              <a class="dropdown-item" href="#">Kevin Langat</a>
+              <a class="dropdown-item" href="../HTML/story1.html">Deborah Ama Paintsil</a>
+              <a class="dropdown-item" href="../HTML/story2.html">Josephine Ekhator Nation</a>
+              <a class="dropdown-item" href="../HTML/story3.html">Justus Wamswa Chemirmir</a>
+              <a class="dropdown-item" href="../HTML/story4.html">Mangaliso Dlamini</a>
+              <a class="dropdown-item" href="../HTML/story5.html">Kevin Langat</a>
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="">The Authors</a>
+            <a class="nav-link" href="../HTML/authors.html">The Authors</a>
           </li>
         </ul>
       </div>
@@ -64,7 +64,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img src="../IMAGES/JO.jpg" class="d-block w-100 author" alt="...">
+          <img src="../IMAGES/nation1.jpeg" class="d-block w-100 author" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5>I'm Josephine</h5>
              <p>a Nigerian citizen and a team member of our project.
