--- a/HTML/story5.html
+++ b/HTML/story5.html
@@ -205,6 +205,37 @@
             </div>
         </footer>
       </section>
+     <!-- begin wwww.htmlcommentbox.com -->
+    <div id="HCB_comment_box">
+      <a href="http://www.htmlcommentbox.com">Widget</a> is loading comments...
+    </div>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0"
+    />
+    <script type="text/javascript" id="hcb">
+      /*<!--*/ if (!window.hcb_user) {
+        hcb_user = {};
+      }
+      (function () {
+        var s = document.createElement("script"),
+          l = hcb_user.PAGE || ("" + window.location).replace(/'/g, "%27"),
+          h = "https://www.htmlcommentbox.com";
+        s.setAttribute("type", "text/javascript");
+        s.setAttribute(
+          "src",
+          h +
+            "/jread?page=" +
+            encodeURIComponent(l).replace("+", "%2B") +
+            "&mod=%241%24wq1rdBcg%24jYNNrbDaB2Kcv9jxUa2wQ1" +
+            "&opts=16798&num=10&ts=1659018632455"
+        );
+        if (typeof s != "undefined")
+          document.getElementsByTagName("head")[0].appendChild(s);
+      })(); /*-->*/
+    </script>
+    <!-- end www.htmlcommentbox.com -->
   
     <script src="https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js" 
     integrity="sha384-GNFwBvfVxBkLMJpYMOABq3c+d3KnQxudP/mGPkzpZSTYykLBNsZEnG2D9G/X/+7D" 
